# Gen-AI-Data-Engineering-Agent

./: README.md  agent_workflow.docx  pyproject.toml
Agents/: connect_amazon_bedrock.py  execute_python_code_agent.py  format_detection_agent.py  generate_python_code_agent.py  infer_schema_agent.py  pydantic_parquet_agent.py  synthetic_dataset_agent.ipynb  synthetic_dataset_agent.py  upload_to_S3_agent.py
